fixing spacing...

--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -90,8 +90,8 @@
   }
   .jumbotron {
     background-image: url("../images/homepage/bg2.png");
-    background-attachment: fixed;
-    height: 45vh;
+    height: 47vh;
+    object-fit:cover;
     background-repeat: no-repeat;
     margin-bottom: 0;
     background-position: right top;
